--- a/TravelPlaces/index.html
+++ b/TravelPlaces/index.html
@@ -4,26 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./style.css" rel="stylesheet" />
+    <link href="./place.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body>
-    <div class="place-grid">
-      <a class="place-card" href="#">
-        <div class="place-card__cover">
+    <div class="container">
+      <div class="panel">
+        <div class="panel_img">
           <img
-            src="https://andrewhawkes.github.io/codepen-assets/steam-game-cards/game_1.jpg"
-            alt="Place cover"
+            src="https://images.pexels.com/photos/2413613/pexels-photo-2413613.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt=""
           />
-          <div class="place-content">
-            <div class="title">Taj Mahal</div>
-            <div class="content-container">
-              <div class="address">Agra, Uttar Pradesh</div>
-              <div class="ratings">4.5⭐</div>
+        </div>
+
+        <div class="panel_content">
+          <div class="panel_top">
+            <span>Agra,</span>
+            <span>Uttar Pradesh,</span>
+            <span>India</span>
+          </div>
+
+          <h1>Taj Mahal</h1>
+          <p>
+            The Taj Mahal is an ivory-white marble mausoleum on the right bank
+            of the Yamuna river in the Indian city of Agra. It was commissioned
+            in 1632 by the Mughal emperor, Shah Jahan, to house the tomb of his
+            favourite wife, Mumtaz Mahal.
+          </p>
+
+          <div class="providers-container">
+            <div class="provider">
+              <h2>Ola</h2>
+              <p>Cab Service</p>
+              <p>1234567890</p>
             </div>
           </div>
         </div>
-      </a>
+      </div>
     </div>
   </body>
+  <script></script>
 </html>
